# ppe-detection-group5

./: .gitignore  LICENSE  Makefile  README.md  main.py  pyproject.toml
docs/: class_definitions.md  error_analysis.md  governance_checklist.md  reproducibility_checklist.md  sam_exploration.md
notebooks/: PPE_Detection_Training.ipynb  README.md
results/evidence/: README.md
results/training_plots/: .gitkeep
slides/: MAICEN_1125_M4_U4_Group_5_Assignment_Slides.pptx
